--- a/src/app/pages/mvp-package/mvp-package.component.scss
+++ b/src/app/pages/mvp-package/mvp-package.component.scss
@@ -8,13 +8,27 @@
     max-width: 900px;
     margin: 40px auto;
     box-shadow: 0 20px 50px rgba(59, 43, 91, 0.7);
-    padding: 20px 20px 0;
+    padding: 10px;
     border-radius: 10px;
     background-color: $color-pickledBluewood;
 
     @include md {
       padding: 20px;
-      margin: 70px auto;
+      margin: 20px auto 70px auto;
+    }
+  }
+
+  &__title {
+    margin-bottom: 20px;
+    @include font-size(32);
+
+    @include md {
+      @include font-size(62);
+    }
+  }
+
+  &__form-content {
+    @include md {
       display: flex;
     }
   }
@@ -31,7 +45,8 @@
   }
 
   .message {
-    padding: 10px 0;
+    padding: 10px;
+    margin-top: 20px;
   }
 
   &__icon {
@@ -63,5 +78,65 @@
     display: inline-block;
     margin-left: $space-medium;
     color: $color-oldBrick;
+  }
+
+  &__hero {
+    min-height: 100vh;
+    display: grid;
+    align-items: center;
+    text-align: center;
+    margin: 50px auto -1px auto;
+    background:
+      url(/assets/images/bottom-curve.svg) no-repeat bottom center,
+      radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
+
+    @include md {
+      margin-top: 0;
+      text-align: left;
+    }
+  }
+
+  &__content {
+    margin: 70px auto;
+    text-align: left;
+  }
+
+  &__logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  &__faqs {
+    list-style: none;
+    padding: 0;
+    text-align: left;
+    margin: 0 0 70px 0;
+  }
+
+  &__faq-answer {
+    padding: 1rem;
+  }
+
+  &__faqs-summary {
+    @include title-font;
+    @include font-size(24);
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  &__faq-item {
+    margin: 20px 0;
+  }
+
+  &__star {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: rotate(15deg);
+    width: 150px;
   }
 }
