--- a/src/app/pages/mvp-package/mvp-package.component.scss
+++ b/src/app/pages/mvp-package/mvp-package.component.scss
@@ -85,7 +85,7 @@
     display: grid;
     align-items: center;
     text-align: center;
-    margin: 50px auto -1px auto;
+    margin: 50px -1px -2px -1px;
     background:
       url(/assets/images/bottom-curve.svg) no-repeat bottom center,
       radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
