--- a/src/app/pages/mvp-package/mvp-package.component.scss
+++ b/src/app/pages/mvp-package/mvp-package.component.scss
@@ -85,7 +85,8 @@
     display: grid;
     align-items: center;
     text-align: center;
-    margin: 50px -1px -2px -1px;
+    margin: 0 -1px -5px -1px;
+    padding-top: 70px;
     background:
       url(/assets/images/bottom-curve.svg) no-repeat bottom center,
       radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
