--- a/src/app/pages/location/location.component.html
+++ b/src/app/pages/location/location.component.html
@@ -11,7 +11,7 @@
       and build out your needs and solutions to your problems.
     </p>
 
-    <section *ngIf="type === 'strategy' || !type">
+    <section *ngIf="type === 'web app strategy' || !type">
       <h2>App Strategy</h2>
 
       <p>
@@ -28,7 +28,7 @@
 
     </section>
 
-    <section *ngIf="type === 'design' || !type">
+    <section *ngIf="type === 'web app design' || !type">
       <h2>App Design</h2>
 
       <p>
@@ -42,7 +42,7 @@
 
     </section>
 
-    <section *ngIf="type === 'development' || !type">
+    <section *ngIf="type === 'web app development' || !type">
       <h2>Development</h2>
 
       <p>
@@ -70,9 +70,9 @@
       </p>
 
       <ul class="list-plain">
-        <li><a href="https://jupiterandthegiraffe.com">App Strategy<span class="sr-only"> agency</span> {{location}}</a></li>
-        <li><a href="https://jupiterandthegiraffe.com">App Design<span class="sr-only"> agency</span> {{location}}</a></li>
-        <li><a href="https://jupiterandthegiraffe.com">App Development<span class="sr-only"> agency</span> {{location}}</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Web App Strategy<span class="sr-only"> agency</span> {{location}}</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Web App Design<span class="sr-only"> agency</span> {{location}}</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Web App Development<span class="sr-only"> agency</span> {{location}}</a></li>
       </ul>
     </section>
 
