--- a/src/app/pages/home/case-study/case-study.component.html
+++ b/src/app/pages/home/case-study/case-study.component.html
@@ -18,9 +18,14 @@
 
       <p *ngIf="data.acf?.work_type"><strong>{{data.acf.work_type}}</strong></p>
 
-      <a [routerLink]="'/case-study/' + data.slug" class="case-study__link">
+      <a *ngIf="data.acf.external_link as link else internalLink;" [href]="link" class="case-study__link">
         View<span class="sr-only"> {{data.title.rendered}}</span> case study <i aria-hidden="true" class="fa fa-arrow-right"></i>
       </a>
+      <ng-template #internalLink>
+        <a [routerLink]="'/case-study/' + data.slug" class="case-study__link">
+          View<span class="sr-only"> {{data.title.rendered}}</span> case study <i aria-hidden="true" class="fa fa-arrow-right"></i>
+        </a>
+      </ng-template>
     </div>
   </div>
 </section>
