--- a/src/app/pages/home/friends/friends.component.scss
+++ b/src/app/pages/home/friends/friends.component.scss
@@ -12,15 +12,19 @@
   background-attachment: fixed;
 
   &__image {
-    max-height: 175px;
-    width: 100%;
+    max-height: 110px;
+    width: auto;
     transition: transform .3s ease;
     opacity: 0.8;
+    max-width: 100%;
 
     @include md {
-      max-height: 110px;
       max-width: 150px;
     }
+  }
+
+  &__list {
+    justify-content: space-between;
   }
 
   &__link {
@@ -33,8 +37,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: 0 1 50%;
+    max-width: 50%;
 
     @include md {
+      flex: 0 1 20%;
+      max-width: 20%;
       min-height: 100px;
     }
   }
