--- a/src/app/pages/home/pricing/pricing.component.html
+++ b/src/app/pages/home/pricing/pricing.component.html
@@ -1,4 +1,4 @@
-<div class="section pricing text-center">
+<div class="section pricing text-center" id="pricing" #pricing>
   <h2 class="text-center" data-aos="fade-in">Pricing Packages</h2>
 
   <div class="row pricing__prices">
