--- a/src/app/pages/home/pricing/pricing.component.html
+++ b/src/app/pages/home/pricing/pricing.component.html
@@ -10,8 +10,8 @@
 
         <div class="pricing__card-body">
 
-          <h4 class="pricing__card-price pricing__card-price--large pricing__card-price--strike">£1,000</h4>
-          <strong class="pricing__card-discount">£800</strong>
+          <h4 class="pricing__card-price pricing__card-price--large">£1,000</h4>
+          <!-- <strong class="pricing__card-discount">£800</strong> -->
 
           <strong>
             Need a website that converts?
@@ -29,7 +29,7 @@
             <a [routerLink]="['/website-package']" class="btn btn--lg btn--outline btn--dark">Learn more</a>
           </div>
 
-          <img src="/assets/images/star-20.png" alt="" class="pricing__star">
+          <!-- <img src="/assets/images/star-20.png" alt="" class="pricing__star"> -->
         </div>
       </section>
     </div>
@@ -41,8 +41,8 @@
 
         <div class="pricing__card-body">
 
-          <h4 class="pricing__card-price pricing__card-price--large pricing__card-price--strike">£6,000</h4>
-          <strong class="pricing__card-discount">£3,800</strong>
+          <h4 class="pricing__card-price pricing__card-price--large">£6,000</h4>
+          <!-- <strong class="pricing__card-discount">£3,800</strong> -->
 
           <strong>
             Got an app idea?
@@ -63,7 +63,7 @@
             <a [routerLink]="['/mvp-package']" class="btn btn--lg btn--black">Learn more</a>
           </div>
 
-          <img src="/assets/images/star.png" alt="" class="pricing__star">
+          <!-- <img src="/assets/images/star.png" alt="" class="pricing__star"> -->
         </div>
       </section>
     </div>
