--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="{'keyboard-user': isKeyboardUser}" [attr.aria-busy]="loading" style="overflow: hidden;">
+<div [ngClass]="{'keyboard-user': isKeyboardUser}" [attr.aria-busy]="loading">
   <app-header-component
     [show]="showHeader"
     (toggleMenu)="toggleMenu()"
