--- a/src/app/pages/home/case-study/case-study.component.scss
+++ b/src/app/pages/home/case-study/case-study.component.scss
@@ -5,6 +5,10 @@
   &__title {
     @include font-size(22);
     margin-bottom: $space-large;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-style: italic;
   }
 
   &__info {
@@ -87,7 +91,7 @@
         transform: translateX(5px);
       }
     }
-    
+
     &::after {
       display: none;
     }
