--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,8 +10,8 @@
         <p class="home__tagline hidden-md">
           <em
             appParallax
-            [ratio]=".15"
-            direction="horizontal"
+            [parallaxRatio]=".15"
+            parallaxDirection="horizontal"
             style="display: inline-block;"
             class="home__tagline-border"
             [innerHTML]="homepageService.homepage.acf.what_we_do"
