--- a/src/app/pages/home/pricing/pricing.component.html
+++ b/src/app/pages/home/pricing/pricing.component.html
@@ -1,17 +1,17 @@
 <div class="section pricing text-center" id="pricing" #pricing>
-  <h2 class="text-center" data-aos="fade-in">Pricing Packages</h2>
+  <p class="text-center h2" data-aos="fade-in">Pricing Packages</p>
 
   <div class="row pricing__prices">
     <div class="col-md">
       <section class="pricing__card text-center">
         <header class="pricing__card-header">
-          <h3 class="pricing__card-title">SaaS Website Package</h3>
+          <h2 class="h3 pricing__card-title">SaaS Website Package</h2>
         </header>
 
         <div class="pricing__card-body">
 
-          <h4 class="pricing__card-price pricing__card-price--large">£1,000</h4>
-          <!-- <strong class="pricing__card-discount">£800</strong> -->
+          <h3 class="pricing__card-price pricing__card-price--large">£1,000</h3>
+         <!-- <strong class="pricing__card-discount">£800</strong> -->
 
           <strong>
             Need a website that converts?
@@ -36,13 +36,13 @@
     <div class="col-md">
       <section class="pricing__card pricing__card--feature text-center">
         <header class="pricing__card-header">
-          <h3 class="pricing__card-title">SaaS MVP Package</h3>
+          <h2 class="h3 pricing__card-title">SaaS MVP Package</h2>
         </header>
 
         <div class="pricing__card-body">
 
-          <h4 class="pricing__card-price pricing__card-price--large">£6,000</h4>
-          <!-- <strong class="pricing__card-discount">£3,800</strong> -->
+          <h3 class="pricing__card-price pricing__card-price--large">£6,000</h3>
+         <!-- <strong class="pricing__card-discount">£3,800</strong> -->
 
           <strong>
             Got an app idea?
@@ -70,12 +70,12 @@
     <div class="col-md">
       <section class="pricing__card text-center">
         <header class="pricing__card-header">
-          <h3 class="pricing__card-title">SaaS Premium Package</h3>
+          <h2 class="h3 pricing__card-title">SaaS Premium Package</h2>
         </header>
 
         <div class="pricing__card-body">
 
-          <h4 class="pricing__card-price pricing__card-price--small">Contact us</h4>
+          <h3 class="pricing__card-price pricing__card-price--small">Contact us</h3>
 
           <strong>
             Build your ambitions and take on the world.
